notes play the correct pitch, updated z-index of treble clef

--- a/music-assistant/src/App.css
+++ b/music-assistant/src/App.css
@@ -129,4 +129,5 @@ body {
   width: 3.3em;
   left: 10em;
   top: 24.5em;
+  z-index: 10;
 }
